--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                         <a class="nav-link" href="#pro">
                             Projects</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle " href="javascript:;" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Trainings
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="/js.html">Javascript Training</a>
+                        </div>
+                      </li>
                 </ul>
             </div>
         </div>
