--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
                         <h1>Muhammad Rafay</h1>
                         <i class="material-icons">code</i>
-                        <h3 class="title text-center">Web Developer</h3>
+                        <h3 class="title text-center">Software Engineer</h3>
+                        <h4>ASP.Net | ASP.NetCore | MERN | MEVN</h4>
                     </div>
                 </div>
             </div>
