--- a/js.html
+++ b/js.html
@@ -33,7 +33,7 @@
                     <li>Let,const,var </li>
                     <li>comparison operator</li>
                     <li>airthemetic operators</li>
-                    <li>ternary operaotr</li>
+                    <li>ternary operator</li>
                     <li>switch case</li>
                     <li>functions</li>
                     <li>Object Literals</li>
@@ -41,7 +41,7 @@
 
                     </li>
                 </ol>
-                <h4 class="mt-5">Advance 1</h4>
+                <h4 class="mt-5">Intermediate</h4>
                 <ol>
                     <li>Array</li>
                     <li>
@@ -55,7 +55,7 @@
                     </li>
                     <li>Events & callbacks</li>
                 </ol>
-                <h4 class="mt-5">Advance 2</h4>
+                <h4 class="mt-5">Advance 1</h4>
                 <ol>
                     <li>Js Scopes</li>
                     <li>Hoisting</li>
@@ -65,7 +65,7 @@
                     <li>Function constructors</li>
                     <li>Prototypes</li>
                 </ol>
-                <h4 class="mt-5">Advance 3</h4>
+                <h4 class="mt-5">Advance 2</h4>
                 <ol>
                     <li>setTimeout</li>
                     <li>setInterval</li>
@@ -86,25 +86,29 @@
 
             </div>
             <div class="col border">
-                <h4>Top Js FrameWorks</h4>
+                <h4 class="mt-5">Top Js Front-End FrameWorks</h4>
                 <ol>
                     <li>
-                        <p>
-                            React
-                        </p>
+                        <a href="https://reactjs.org/" target="_blank">React</a>
                         <p>Maintained by Facebook and a community of individual developers and companies</p>
                     </li>
                     <li>
-                        <p>Vuejs</p>
+                        <a href="https://vuejs.org/" target="_blank">Vuejs</a>
                         <p>Created by Evan You, and is maintained by him and the rest of the active core team members
                         </p>
                     </li>
                     <li>
-                        <p>
-                            Angular
-                        </p>
+                       <a href="https://angular.io/" target="_blank">Angular</a>
                         <p>Application framework led by the Angular Team at Google and by a community of individuals and
                             corporations</p>
+                    </li>
+                </ol>
+                <h4 class="mt-5">Js Back-end Framework</h4>
+                <ol>
+                    <li>
+                        <a href="https://expressjs.com/" target="_blank">
+                            ExpressJs
+                        </a>
                     </li>
                 </ol>
             </div>
