--- a/js.html
+++ b/js.html
@@ -72,6 +72,17 @@
                     <li>Promises</li>
                     <li>async & await</li>
                 </ol>
+                <h4 class="mt-5">Es5</h4>
+                <ol>
+                    <li>Modules</li>
+                    <li>require | module.exports </li>
+                </ol>
+                <h4 class="mt-5">Es6</h4>
+                <ol>
+                    <li>Classes</li>
+                    <li>Modules</li>
+                    <li>import | export | export default{</li>
+                </ol>
                 <h4 class="mt-5">Browser Apis</h4>
                 <ol>
                     <li>Ajax Concept</li>
@@ -98,7 +109,7 @@
                         </p>
                     </li>
                     <li>
-                       <a href="https://angular.io/" target="_blank">Angular</a>
+                        <a href="https://angular.io/" target="_blank">Angular</a>
                         <p>Application framework led by the Angular Team at Google and by a community of individuals and
                             corporations</p>
                     </li>
