--- a/js.html
+++ b/js.html
@@ -81,7 +81,7 @@
                 <ol>
                     <li>Classes</li>
                     <li>Modules</li>
-                    <li>import | export | export default{</li>
+                    <li>import | export | export default</li>
                 </ol>
                 <h4 class="mt-5">Browser Apis</h4>
                 <ol>
