vuejs training added

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                           <a class="dropdown-item" href="/js.html">Javascript Training</a>
+                          <a class="dropdown-item" href="/vuejs.html">Vuejs Training</a>
                         </div>
                       </li>
                 </ul>
