new styles on training

--- a/js.html
+++ b/js.html
@@ -17,8 +17,8 @@
     <link href="assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
 </head>
 
-<body>
-    <div class="container">
+<body class="bg-white">
+    <div class="container ">
         <div class="row">
             <div class="col text-center">
                 <h1 style="text-decoration: underline;">Javascript Training</h1>
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col border">
+            <div class="card col border m-2">
 
                 <h4 class="mt-5">Basics</h4>
                 <ol>
@@ -96,7 +96,7 @@
                 </ol>
 
             </div>
-            <div class="col border">
+            <div class="card col border m-2">
                 <h4 class="mt-5">Top Js Front-End FrameWorks</h4>
                 <ol>
                     <li>
