--- a/vuejs.html
+++ b/vuejs.html
@@ -17,16 +17,16 @@
     <link href="assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
 </head>
 
-<body>
-    <div class="container">
+<body class="bg-white">
+    <div class="container ">
         <div class="row">
             <div class="col text-center">
                 <h1 style="text-decoration: underline;">Vuejs Training</h1>
                 By:<a href="/index.html"> Muhammad Rafay</a>
             </div>
         </div>
-        <div class="row">
-            <div class="col border">
+        <div class="row ">
+            <div class="card col border m-2">
                 <h4 class="mt-5">Basics</h4>
                 <ol>
                     <li>SPA Basics</li>
@@ -67,7 +67,7 @@
                     <li>Mixins</li>
                 </ol>
             </div>
-            <div class="col border">
+            <div class="card col border m-2">
                 <h1 style="text-decoration: underline;">Resources</h1>
                 <ul>
                     <li><a href="https://vuejs.org/" target="_blank">Vue documentation</a></li>
