new content added related to to js stacks

--- a/js.html
+++ b/js.html
@@ -25,8 +25,8 @@
                 By:<a href="/index.html"> Muhammad Rafay</a>
             </div>
         </div>
-        <div class="row">
-            <div class="card col border m-2">
+        <div class="row justify-content-center">
+            <div class="card col-11 col-lg-5 border m-2">
 
                 <h4 class="mt-5">Basics</h4>
                 <ol>
@@ -96,7 +96,7 @@
                 </ol>
 
             </div>
-            <div class="card col border m-2">
+            <div class="card col-11 col-lg-5  border m-2">
                 <h4 class="mt-5">Top Js Front-End FrameWorks</h4>
                 <ol>
                     <li>
@@ -120,6 +120,36 @@
                         <a href="https://expressjs.com/" target="_blank">
                             ExpressJs
                         </a>
+                    </li>
+                </ol>
+                <h4 class="mt-5">Top most popular js stacks</h4>
+                <ol>
+                    <li>
+                        MEAN
+                        <ul>
+                            <li> MongoDB: A cross-platform document database</li>
+                            <li> Express.js: A back-end web application framework </li>
+                            <li> Angular: Front-end web framework used for developing single-page applications.</li>
+                            <li> Node.js: A cross-platform JavaScript run-time environment</li>
+                        </ul>
+                    </li>
+                    <li>
+                        MERN
+                        <ul>
+                            <li> MongoDB</li>
+                            <li>Express.js</li>
+                            <li>React</li>
+                            <li>Node.js</li>
+                        </ul>
+                    </li>
+                    <li>
+                        MEVN
+                        <ul>
+                            <li> MongoDB</li>
+                            <li>Express.js</li>
+                            <li>Vuejs</li>
+                            <li>Node.js</li>
+                        </ul>
                     </li>
                 </ol>
             </div>
