--- a/vuejs.html
+++ b/vuejs.html
@@ -25,8 +25,8 @@
                 By:<a href="/index.html"> Muhammad Rafay</a>
             </div>
         </div>
-        <div class="row ">
-            <div class="card col border m-2">
+        <div class="row justify-content-center">
+            <div class="card col-11 col-lg-5 border m-2">
                 <h4 class="mt-5">Basics</h4>
                 <ol>
                     <li>SPA Basics</li>
@@ -67,7 +67,7 @@
                     <li>Mixins</li>
                 </ol>
             </div>
-            <div class="card col border m-2">
+            <div class="card col-11 col-lg-5 border m-2">
                 <h1 style="text-decoration: underline;">Resources</h1>
                 <ul>
                     <li><a href="https://vuejs.org/" target="_blank">Vue documentation</a></li>
