--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="bg-white">
-    <nav  class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="100">
+    <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="100">
         <div class="container">
             <div class="navbar-translate">
 
@@ -49,21 +49,23 @@
                             Projects</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="javascript:;" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Trainings
+                        <a class="nav-link dropdown-toggle " href="javascript:;" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Trainings
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="/js.html">Javascript Training</a>
-                          <a class="dropdown-item" href="/vuejs.html">Vuejs Training</a>
+                            <a class="dropdown-item" href="/js.html">Javascript Training</a>
+                            <a class="dropdown-item" href="/vuejs.html">Vuejs Training</a>
+                            <a class="dropdown-item" href="/articles/jwtrealsignout.html">JWT Real Logout</a>
                         </div>
-                      </li>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
 
-    <div  class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg2.jpg')">
+    <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg2.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
@@ -113,8 +115,8 @@
         </div>
         <div class="row " id="pro">
             <div class="col">
-                <div class="card" >
-                    <div  class="card-header" style="background: linear-gradient(60deg, #17222e, #772d78)">
+                <div class="card">
+                    <div class="card-header" style="background: linear-gradient(60deg, #17222e, #772d78)">
                         <h3 class="card-title text-white">Github Repositories & Projects</h3>
                     </div>
                     <div class="card-body " id="c2">
@@ -177,7 +179,7 @@
     <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
     <script src="assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
     <script src="scripts/scripts.min.js">
-       
+
     </script>
 </body>
 
