--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                         <a class="nav-link" href="#pro">
                             Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://mr-devs.ml/" target="_blank">
+                            FYP</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle " href="javascript:;" id="navbarDropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,6 +63,7 @@
                             <a class="dropdown-item" href="/articles/jwtrealsignout.html">JWT Real Logout</a>
                         </div>
                     </li>
+
                 </ul>
             </div>
         </div>
