--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-62MWKMLCV6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-62MWKMLCV6');
+    </script>
     <!--  Fonts and icons  -->
     <!-- Fonts and icons -->
     <link rel="stylesheet" type="text/css"
@@ -55,6 +64,16 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle " href="javascript:;" id="navbarDropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Webinars
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" target="_blank"
+                                href="https://www.youtube.com/watch?v=xR8o3uhB2Pk&t=158s">Vanilla JavaScript</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle " href="javascript:;" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Trainings
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -91,7 +110,17 @@
             </div>
         </div>
     </div>
+
     <div class="container-fluid">
+        <div class="row ">
+            <div class="col d-flex justify-content-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xR8o3uhB2Pk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div id="c1" class="card">
