fyp references added

--- a/fyp/project-artifacts.html
+++ b/fyp/project-artifacts.html
@@ -21,7 +21,8 @@
     <nav></nav>
     <div class="container" style="margin-top:8%;">
         <div class="row justify-content-center">
-            <ol>
+            <h1>Coming Soon</h1>
+            <!-- <ol>
                 <li>
                     <a href="http://hlf-automater.herokuapp.com/" target="_blank">HLF-Automater</a>
                 </li>
@@ -31,7 +32,7 @@
                 <li>
                     <a href="" target="_blank">Final Report</a>
                 </li>
-            </ol>
+            </ol> -->
         </div>
 
     </div>
