--- a/fyp/project-introduction.html
+++ b/fyp/project-introduction.html
@@ -20,7 +20,7 @@
 <body class="bg-white">
     <nav></nav>
     <div class="container" style="margin-top:8%;">
-       
+
         <div class="row justify-content-center">
             <ol>
                 <li>
@@ -71,6 +71,26 @@
                         <li>Tamper free securable environment.</li>
                     </ul>
                     </p>
+                </li>
+                <li>
+                    Tech stacks
+                    <ul>
+                       <li>NodeJS</li>
+                       <li>ExpressJS</li>
+                       <li>VueJS</li>
+                       <li>MongoDB</li>
+                       <li>RabbitMQ</li>
+                       <li>Hyperledger Fabric</li>
+                    </ul>
+                </li>
+                <li>
+                    Deployments
+                    <ul>
+                       <li>Heroku</li>
+                       <li>Mongo Atlas</li>
+                       <li>Linux</li>
+                       <li>Docker</li>
+                    </ul>
                 </li>
             </ol>
         </div>
