--- a/fyp/project-summarized-architecture.html
+++ b/fyp/project-summarized-architecture.html
@@ -19,7 +19,7 @@
 
 <body class="bg-white">
     <nav></nav>
-    <div class="container" style="margin-top:8%;">
+    <div class="container" style="margin-top:120px;">
         <div class="row">
             <div class="col text-center">
                 <h3 style="text-decoration: underline;">Architecture Of BlockChain Based E-Certification</h3>
@@ -35,6 +35,16 @@
     </div>
     <script type="text/javascript" src="https://viewer.diagrams.net/js/viewer-static.min.js"></script>
     <script type="text/javascript" src="../components/navbar-fyp.js"></script>
+    <script src="/assets/js/core/jquery.min.js" type="text/javascript"></script>
+    <script src="/assets/js/core/popper.min.js" type="text/javascript"></script>
+    <script src="/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+    <script src="/assets/js/plugins/moment.min.js"></script>
+    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+    <script src="/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <script src="/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+    <script src="/assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
     <script>
         window.addEventListener('load', function () {
             const nav = document.createElement('nav');
