fyp section links added in main page

--- a/fyp/project-introduction.html
+++ b/fyp/project-introduction.html
@@ -73,7 +73,7 @@
                     </p>
                 </li>
                 <li>
-                    Tech stacks
+                    Tech Stack
                     <ul>
                        <li>NodeJS</li>
                        <li>ExpressJS</li>
