meta tag added for description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Muhammad Rafay</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="Description" CONTENT="Muhammad Rafay is a software Engineer with having an interest in designing & developing large-scale systems, complex software architectures, Distributed computing & blockchain, my final year project is in the blockchain stream which is built using Hyperledger fabric. I have hands-on experience in MERN, MEVN & .Net stacks.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
