--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <i class="material-icons">code</i>
                         <h3 class="title text-center">Software Engineer</h3>
                         <h4>ASP.Net | ASP.NetCore | MERN | MEVN</h4>
+                        <p>I am a software engineer with having an interest in designing & developing large-scale systems, complex software architectures, distributed computing & blockchain.</p>
                     </div>
                 </div>
             </div>
