profile image responsiveness fix
it is fixed using media query

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
     <!-- Material Kit CSS -->
     <link href="assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
+    <style>
+        .p1 {
+            width: 300px;
+        }
+        @media only screen and (max-width: 400px) {
+            .p1 {
+                width: 220px;
+                ;
+            }
+        }
+    </style>
 </head>
 
 <body class="bg-white">
@@ -34,11 +45,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
-                    <div>
-
-                    </div>
                     <div class="text-center">
-                        <img class="rounded-circle" src="assets/img/ProfileImg.jpg" width="300" alt="">
+                        <img class="rounded-circle p1" src="assets/img/ProfileImg.jpg"  alt="">
                     </div>
                     <div class="brand text-center">
 
