features list added

--- a/fyp/project-introduction.html
+++ b/fyp/project-introduction.html
@@ -72,6 +72,8 @@
                         The Blockchain based e-certification project will meet the following objectives:
                     <ul>
                         <li>Provide distributed platform for verifiability of certificate.</li>
+                        <li>Any organization can join a blockchain network by deploying nodes.</li>
+                        <li>Organizations hosting the blockchain network can provide services to others.</li>
                         <li>No certificate or data loss due to any mishap.</li>
                         <li>Tamper free securable environment.</li>
                     </ul>
