--- a/fyp/project-summarized-architecture.html
+++ b/fyp/project-summarized-architecture.html
@@ -23,7 +23,16 @@
         <div class="row">
             <div class="col text-center">
                 <h3 style="text-decoration: underline;">Architecture Of BlockChain Based E-Certification</h3>
-                By:<a href="/index.html"> Muhammad Rafay</a>
+                <div class="row">
+                    <div class="col border border-dark">The application's architetcure is designed according to the
+                        principles of following architectures
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col border-dark border">Service Oriented Architecture</div>
+                    <div class="col border-dark border">Distributed Architecture</div>
+                    <div class="col border-dark border">Multitenant Architecture</div>
+                </div>
             </div>
         </div>
         <div class="row justify-content-center">
