--- a/fyp/project-features.html
+++ b/fyp/project-features.html
@@ -54,89 +54,89 @@
         const features = {
             "Manage Organization": [
                 {
-                    name: "Register Organization", roles: ["SuperAdmin"]
+                    name: "Register organization", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "Modify Organization Details", roles: ["SuperAdmin"]
+                    name: "Modify organization details", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "View Organization Details", roles: ["SuperAdmin", "Admin"]
+                    name: "View organization details", roles: ["SuperAdmin", "Admin"]
                 },
                 {
-                    name: "Enable/Disable Organization", roles: ["SuperAdmin"]
+                    name: "Enable/Disable organization", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "Register Organization's Users", roles: ["SuperAdmin"]
+                    name: "Register organization's users", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "Enable/Disable Organization's Users", roles: ["SuperAdmin"]
+                    name: "Enable/Disable organization's users", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "Genreate password reset links for Organization's Users", roles: ["SuperAdmin"]
+                    name: "Genreate password reset links for organization's users", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "Assign Certificate Count to Organizations", roles: ["SuperAdmin"]
+                    name: "Assign certificate count to organizations", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "Reduce Organization's Certificate Count", roles: ["SuperAdmin"]
+                    name: "Reduce organization's certificate count", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "View Oragnization's Count History", roles: ["SuperAdmin"]
+                    name: "View oragnization's count history", roles: ["SuperAdmin"]
                 },
                 {
-                    name: "View Oragnization's Published Certificates", roles: ["SuperAdmin"]
+                    name: "View oragnization's published certificates", roles: ["SuperAdmin"]
                 },
             ],
             "Manage Certificates": [
                 {
-                    name: "Create Certificates", roles: ["Admin", "Issuer"]
+                    name: "Create certificates", roles: ["Admin", "Issuer"]
                 },
                 {
-                    name: "View Certificates", roles: ["Admin", "Issuer"]
+                    name: "View certificates", roles: ["Admin", "Issuer"]
                 },
                 {
-                    name: "View Published Certificates", roles: ["Admin", "Issuer"], notes: ["In his/her own organization only"]
+                    name: "View published certificates", roles: ["Admin", "Issuer"], notes: ["In his/her own organization only"]
                 },
                 {
-                    name: "Modify Certificates", roles: ["Admin", "Issuer"]
+                    name: "Modify certificates", roles: ["Admin", "Issuer"]
                 },
                 {
-                    name: "Delete Certificates", roles: ["Admin", "Issuer"]
+                    name: "Delete certificates", roles: ["Admin", "Issuer"]
                 },
                 {
-                    name: "Publish Certificates", roles: ["Admin", "Issuer"]
+                    name: "Publish certificates", roles: ["Admin", "Issuer"]
                 },
                 {
-                    name: "Publish Notification", roles: ["Admin", "Issuer"]
+                    name: "Publish notification", roles: ["Admin", "Issuer"]
                 },
                 {
-                    name: "Email Published Certificates", roles: ["SuperAdmin", "Admin", "Issuer"]
+                    name: "Email published certificates", roles: ["SuperAdmin", "Admin", "Issuer"]
                 },
                 {
-                    name: "Verify Certificates", roles: ["SuperAdmin", "Admin", "Issuer", "Verifier"]
+                    name: "Verify certificates", roles: ["SuperAdmin", "Admin", "Issuer", "Verifier"]
                 },
                 {
-                    name: "Forget Certificates", roles: ["SuperAdmin", "Admin", "Issuer", "Verifier"]
+                    name: "Forget certificates", roles: ["SuperAdmin", "Admin", "Issuer", "Verifier"]
                 },
             ],
             "Manage Users": [
                 {
-                    name: "Register User", roles: ["Admin"], notes: ["In his/her own Oraginzation only."]
+                    name: "Register user", roles: ["Admin"], notes: ["In his/her own organization only."]
                 },
                 {
-                    name: "Modify User Details", roles: ["Admin"], notes: ["In his/her own Oraginzation only."]
+                    name: "Modify user details", roles: ["Admin"], notes: ["In his/her own organization only."]
                 },
                 {
-                    name: "View User Details", roles: ["Admin"], notes: ["In his/her own Oraginzation only."]
+                    name: "View user details", roles: ["Admin"], notes: ["In his/her own organization only."]
                 },
                 {
                     name: "View personal profile", roles: ["Admin,SuperAdmin", "Issuer"],
                 },
                 {
-                    name: "Genreate reset Password Link", roles: ["Admin"], notes: ["In his/her own Oraginzation only."]
+                    name: "Genreate reset password link", roles: ["Admin"], notes: ["In his/her own organization only."]
                 },
                 {
-                    name: "Directly reset Password", roles: ["Admin", "SuperAdmin"],
+                    name: "Directly reset password", roles: ["Admin", "SuperAdmin"],
                 },
             ],
         }
