--- a/fyp/project-artifacts.html
+++ b/fyp/project-artifacts.html
@@ -15,6 +15,9 @@
 
     <!-- Material Kit CSS -->
     <link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
+    <script>
+        window.location.href = "/errors/503.html"
+    </script>
 </head>
 
 <body class="bg-white">
