--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Muhammad Rafay</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="Description" CONTENT="Muhammad Rafay is a software Engineer with having an interest in designing & developing large-scale systems, complex software architectures, Distributed computing & blockchain, my final year project is in the blockchain stream which is built using Hyperledger fabric. I have hands-on experience in MERN, MEVN & .Net stacks.">
+    <meta name="Description"
+        CONTENT="Muhammad Rafay is a software Engineer with having an interest in designing & developing large-scale systems, complex software architectures, Distributed computing & blockchain, my final year project is in the blockchain stream which is built using Hyperledger fabric. I have hands-on experience in MERN, MEVN & .Net stacks.">
     <meta name="google-site-verification" content="Zu5-AJAL4oU9Ba7pJ1r-wcqXkbJDpFF8z1zZ9Slr3v0" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -30,6 +31,7 @@
         .p1 {
             width: 300px;
         }
+
         @media only screen and (max-width: 400px) {
             .p1 {
                 width: 220px;
@@ -46,15 +48,16 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="text-center">
-                        <img class="rounded-circle p1" src="assets/img/ProfileImg.jpg"  alt="">
+                        <img class="rounded-circle p1" src="assets/img/ProfileImg.jpg" alt="">
                     </div>
                     <div class="brand text-center">
 
                         <h1>Muhammad Rafay</h1>
                         <i class="material-icons">code</i>
                         <h3 class="title text-center">Software Engineer</h3>
-                        <h4>ASP.Net | ASP.NetCore | MERN | MEVN</h4>
-                        <p>I am a software engineer with having an interest in designing & developing large-scale systems, complex software architectures, distributed computing & blockchain.</p>
+                        <h4>ASP.NET CORE | ASP.NET | MERN | MEVN</h4>
+                        <p>I am a software engineer with having an interest in designing & developing large-scale
+                            systems, complex software architectures, distributed computing & blockchain.</p>
                     </div>
                 </div>
             </div>
