allowed some pages

--- a/fyp/project-introduction.html
+++ b/fyp/project-introduction.html
@@ -17,7 +17,7 @@
     <link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
 </head>
 
-<body class="bg-white">
+<body class="bg-white" oncontextmenu="return false" onselectstart="return false">
     <nav></nav>
     <div class="alert alert-success text-center" role="alert" style="margin-top:120px;">
         The Project is approved and accepted under Ignite's FYP Fund <a style="text-decoration: underline;"
