--- a/fyp/project-artifacts.html
+++ b/fyp/project-artifacts.html
@@ -15,12 +15,9 @@
 
     <!-- Material Kit CSS -->
     <link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
-    <script>
-        window.location.href = "/errors/503.html"
-    </script>
 </head>
 
-<body class="bg-white">
+<body class="bg-white" oncontextmenu="return false" onselectstart="return false">
     <nav></nav>
     <div class="container" style="margin-top:120px;">
         <div class="row justify-content-center">
