--- a/fyp/project-features.html
+++ b/fyp/project-features.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 
-<body class="bg-white">
+<body class="bg-white" oncontextmenu="return false" onselectstart="return false">
     <nav></nav>
     <div class="container" style="margin-top:120px;">
         <div class="row justify-content-center">
