--- a/fyp/project-summarized-architecture.html
+++ b/fyp/project-summarized-architecture.html
@@ -17,7 +17,7 @@
     <link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
 </head>
 
-<body class="bg-white">
+<body class="bg-white" oncontextmenu="return false" onselectstart="return false">
     <nav></nav>
     <div class="container" style="margin-top:120px;">
         <div class="row">
