--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     </style>
 </head>
 
-<body class="bg-white">
+<body class="bg-white" oncontextmenu="return false" onselectstart="return false">
     <script src="/components/navbar.js"></script>
     <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg7.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="text-center">
-                        <img class="rounded-circle p1" src="assets/img/ProfileImg.jpg" alt="">
+                        <img class="rounded-circle p1"  src="assets/img/ProfileImg.jpg" alt="">
                     </div>
                     <div class="brand text-center">
 
