--- a/js.html
+++ b/js.html
@@ -17,7 +17,7 @@
     <link href="assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
 </head>
 
-<body class="bg-white">
+<body class="bg-white" oncontextmenu="return false" onselectstart="return false">
     <div class="container ">
         <div class="row">
             <div class="col text-center">
