--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="text-center">
-                        <img class="rounded-circle p1"  src="assets/img/ProfileImg.jpg" alt="">
+                        <img class="rounded-circle p1" src="assets/img/ProfileImg.jpg" alt="">
                     </div>
                     <div class="brand text-center">
 
@@ -68,6 +68,11 @@
         <div class="row ">
             <div class="col d-flex justify-content-center">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/xR8o3uhB2Pk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ofpg5CsfX30"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
