--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
+            </div>
+            <div class="col d-flex justify-content-center">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ofpg5CsfX30"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
