profile pic update

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="text-center">
-                        <img class="rounded-circle p1" src="assets/img/ProfileImg.jpg" alt="">
+                        <img class="rounded-circle p1" src="assets/img/profile.jpeg" alt="">
                     </div>
                     <div class="brand text-center">
 
